[package]
authors = ["haras <social@haras.anonaddy.me>"]
name = "blooper"
description = "Rust DAW"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/haras-unicorn/blooper"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.81"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
directories = "5.0.1"
envy = "0.4.2"
flume = { version = "0.11.0", features = ["async"] }
iced = "0.12.1"
iced_futures = { version = "0.12.0", features = ["tokio"] }
itertools = "0.13.0"
merge = "0.1.0"
num_cpus = "1.16.0"
rand = { version = "0.8.5", features = ["serde"] }
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
symphonia = { version = "0.5.4", features = ["wav"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-scoped = "0.2.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
